<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        
        <variable
            name="isLoading"
            type="Boolean" />

        <variable
            name="tvShowImageURL"
            type="String" />

        <variable
            name="tvShowName"
            type="String" />

        <variable
            name="networkCountry"
            type="String" />

        <variable
            name="status"
            type="String" />

        <variable
            name="startedDate"
            type="String" />

        <variable
            name="description"
            type="String" />

        <variable
            name="rating"
            type="String" />

        <variable
            name="genre"
            type="String" />

        <variable
            name="runTime"
            type="String" />

        <import type="android.view.View"/>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:animateLayoutChanges="true"
        android:background="@color/primary"
        tools:context=".activities.TVShowDetailActivity">

        <androidx.core.widget.NestedScrollView
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/mLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.viewpager2.widget.ViewPager2
                    android:id="@+id/sliderViewPager"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_160sdp"
                    android:orientation="horizontal"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:visibility="gone"
                    app:layout_constraintTop_toTopOf="parent" />

                <View
                    android:id="@+id/viewFadingEdge"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_40sdp"
                    android:visibility="gone"
                    android:background="@drawable/background_fading_edge"
                    app:layout_constraintBottom_toBottomOf="@+id/sliderViewPager"/>

                <LinearLayout
                    android:id="@+id/layoutSliderIndicator"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:gravity="end|center_vertical"
                    android:orientation="horizontal"
                    android:padding="@dimen/_8sdp"
                    android:visibility="gone"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toBottomOf="@+id/viewFadingEdge"
                    app:layout_constraintStart_toEndOf="@+id/imageTVShow"/>


                <ImageView
                    android:id="@+id/imageBack"
                    android:layout_width="@dimen/_25sdp"
                    android:layout_height="@dimen/_25sdp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_margin="@dimen/_10sdp"
                    android:background="@drawable/background_back_icone"
                    android:contentDescription="@string/app_name"
                    android:padding="@dimen/_3sdp"
                    android:src="@drawable/ic_back"
                    />

                <com.makeramen.roundedimageview.RoundedImageView
                    android:id="@+id/imageTVShow"
                    android:layout_width="@dimen/_100sdp"
                    android:layout_height="@dimen/_150sdp"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:imageURL="@{tvShowImageURL}"
                    android:scaleType="centerCrop"
                    app:layout_constraintBottom_toBottomOf="@+id/sliderViewPager"
                    app:layout_constraintTop_toBottomOf="@+id/sliderViewPager"
                    app:riv_corner_radius="@dimen/_6sdp"/>

                <TextView
                    android:id="@+id/textName"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_8sdp"
                    android:layout_marginEnd="@dimen/_8sdp"
                    android:ellipsize="end"
                    android:fontFamily="@font/ubuntu_bold"
                    android:includeFontPadding="false"
                    android:maxLines="1"
                    android:text="@{tvShowName}"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_14sdp"
                    android:visibility="gone"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/imageTVShow"
                    app:layout_constraintTop_toBottomOf="@+id/sliderViewPager"/>

                <TextView
                    android:id="@+id/txtNetworkCountry"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_4sdp"
                    android:ellipsize="end"
                    android:fontFamily="@font/ubuntu"
                    android:includeFontPadding="false"
                    android:maxLines="1"
                    android:text="@{networkCountry}"
                    android:textColor="@color/colorTextOther"
                    android:textSize="@dimen/_12ssp"
                    android:visibility="gone"
                    app:layout_constraintEnd_toEndOf="@+id/textName"
                    app:layout_constraintStart_toStartOf="@+id/textName"
                    app:layout_constraintTop_toBottomOf="@+id/textName"/>

                <TextView
                    android:id="@+id/txt_status"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_4sdp"
                    android:ellipsize="end"
                    android:fontFamily="@font/ubuntu"
                    android:includeFontPadding="false"
                    android:maxLines="1"
                    android:text="@{status}"
                    android:textColor="@android:color/holo_green_light"
                    android:textSize="@dimen/_12ssp"
                    android:visibility="gone"
                    app:layout_constraintEnd_toEndOf="@+id/textName"
                    app:layout_constraintStart_toStartOf="@+id/textName"
                    app:layout_constraintTop_toBottomOf="@+id/txtNetworkCountry"/>

                <TextView
                    android:id="@+id/txt_started"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_4sdp"
                    android:ellipsize="end"
                    android:fontFamily="@font/ubuntu"
                    android:includeFontPadding="false"
                    android:maxLines="1"
                    android:text='@{"Started On: " +startedDate}'
                    android:textColor="@color/colorTextSecondary"
                    android:textSize="@dimen/_12ssp"
                    android:visibility="gone"
                    app:layout_constraintEnd_toEndOf="@+id/textName"
                    app:layout_constraintStart_toStartOf="@+id/textName"
                    app:layout_constraintTop_toBottomOf="@+id/txt_status"/>

                <TextView
                    android:id="@+id/txt_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_marginStart="@dimen/_8sdp"
                    android:layout_marginEnd="@dimen/_8sdp"
                    android:fontFamily="@font/ubuntu"
                    android:includeFontPadding="false"
                    android:lineSpacingExtra="@dimen/_2sdp"
                    android:maxLines="4"
                    android:text="@{description}"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_11sdp"
                    android:visibility="gone"
                    app:layout_constraintTop_toBottomOf="@+id/imageTVShow"
                    tools:layout_editor_absoluteX="10dp" />

                <TextView
                    android:id="@+id/txt_readMore"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_3sdp"
                    android:fontFamily="@font/ubuntu_medium"
                    android:layout_marginBottom="@dimen/_5sdp"
                    android:includeFontPadding="false"
                    android:text="@string/read_more"
                    android:textColor="@color/accent"
                    android:textSize="@dimen/_12sdp"
                    android:visibility="gone"
                    app:layout_constraintStart_toStartOf="@+id/txt_description"
                    app:layout_constraintTop_toBottomOf="@+id/txt_description"/>

                <View
                    android:id="@+id/viewDivide1"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginStart="@dimen/_8sdp"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:layout_marginEnd="@dimen/_8sdp"
                    android:background="@color/colorTextSecondary"
                    android:visibility="gone"
                    app:layout_constraintTop_toBottomOf="@+id/txt_readMore"/>

                <LinearLayout
                    android:id="@+id/layoutMisc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_8sdp"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:layout_marginEnd="@dimen/_8sdp"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:visibility="gone"
                    app:layout_constraintTop_toBottomOf="@+id/viewDivide1">

                    <ImageView
                        android:layout_width="@dimen/_20sdp"
                        android:layout_height="@dimen/_20sdp"
                        android:src="@drawable/ic_star"
                        app:tint="@color/colorTextOther" />
                    
                    <TextView
                        android:id="@+id/textRating"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_5sdp"
                        android:fontFamily="@font/ubuntu"
                        android:includeFontPadding="false"
                        android:text="@{rating}"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_12ssp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_8sdp"
                        android:fontFamily="@font/ubuntu_bold"
                        android:includeFontPadding="false"
                        android:text="@string/u2022"
                        android:textColor="@color/accent"
                        android:textSize="@dimen/_13ssp"/>

                    <TextView
                        android:id="@+id/textGenre"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_8sdp"
                        android:fontFamily="@font/ubuntu"
                        android:includeFontPadding="false"
                        android:text="@{genre}"
                        android:textColor="@color/white"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_8sdp"
                        android:fontFamily="@font/ubuntu_bold"
                        android:includeFontPadding="false"
                        android:text="@string/u2022"
                        android:textColor="@color/accent"
                        android:textSize="@dimen/_13ssp"/>

                    <TextView
                        android:id="@+id/textRunTime"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_8sdp"
                        android:fontFamily="@font/ubuntu"
                        android:includeFontPadding="false"
                        android:text="@{runTime}"
                        android:textColor="@color/white"/>


                </LinearLayout>

              <View
                  android:id="@+id/viewDivider2"
                  android:layout_width="match_parent"
                  android:layout_height="1dp"
                  android:layout_marginStart="@dimen/_8sdp"
                  android:layout_marginTop="@dimen/_5sdp"
                  android:layout_marginEnd="@dimen/_8sdp"
                  android:background="@color/colorTextSecondary"
                  android:visibility="gone"
                  app:layout_constraintTop_toBottomOf="@+id/layoutMisc"/>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/buttonWebsite"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_8sdp"
                    android:fontFamily="@font/ubuntu_medium"
                    android:includeFontPadding="false"
                    android:text="@string/website"
                    android:textSize="@dimen/_12ssp"
                    android:visibility="gone"
                    android:backgroundTint="@color/accent"
                    app:cornerRadius="@dimen/_6sdp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/buttonEpisodes"
                    app:layout_constraintTop_toBottomOf="@+id/viewDivider2"/>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/buttonEpisodes"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_4sdp"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:layout_marginEnd="@dimen/_8sdp"
                    android:layout_marginBottom="@dimen/_8sdp"
                    android:fontFamily="@font/ubuntu_medium"
                    android:includeFontPadding="false"
                    android:text="@string/episodes"
                    android:textSize="@dimen/_12ssp"
                    android:visibility="gone"
                    android:textColor="#212121"
                    android:backgroundTint="@color/colorTextOther"
                    app:cornerRadius="@dimen/_6sdp"
                    app:layout_constraintBottom_toBottomOf="parent"
                   app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/buttonWebsite"
                    app:layout_constraintTop_toBottomOf="@+id/viewDivider2"/>

            </androidx.constraintlayout.widget.ConstraintLayout>


        </androidx.core.widget.NestedScrollView>

        
        <ProgressBar
            android:layout_width="@dimen/_25sdp"
            android:layout_height="@dimen/_25sdp"
            android:visibility="@{isLoading ? View.VISIBLE:View.GONE,default=gone}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <ImageView
            android:id="@+id/imgWatchList"
            android:layout_width="@dimen/_35sdp"
            android:layout_height="@dimen/_35sdp"
            android:background="@drawable/background_fab"
            android:contentDescription="@string/app_name"
            android:padding="@dimen/_8sdp"
            android:src="@drawable/ic_eyes"
            android:layout_margin="@dimen/_10sdp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
    
</layout>